--- a/Makefile.in
+++ b/Makefile.in
@@ -94,6 +94,7 @@ LN_S = @LN_S@
 MAINT = @MAINT@
 OBJDUMP = @OBJDUMP@
 PACKAGE = @PACKAGE@
+PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
 RC = @RC@
 STRIP = @STRIP@
