--- a/Makefile.in
+++ b/Makefile.in
@@ -126,9 +126,9 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	uninstall-info-recursive all-recursive install-data-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
-DIST_COMMON = AUTHORS COPYING Makefile.am Makefile.in TODO aclocal.m4 \
-	config.guess config.sub configure configure.in depcomp \
-	install-sh ltmain.sh missing mkinstalldirs
+DIST_COMMON = AUTHORS COPYING ChangeLog Makefile.am Makefile.in TODO \
+	aclocal.m4 config.guess config.sub configure configure.in \
+	depcomp install-sh ltmain.sh missing mkinstalldirs
 DIST_SUBDIRS = $(SUBDIRS)
 all: all-recursive
 
