added text element
git-svn-id: file:///home/jordan/Development/wxSVG/wxsvg-svn/trunk@26 918b0bbe-f86e-4b6f-834e-cb0f658702cb

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,9 +10,10 @@ libwxsvg_la_SOURCES = SVGDocument.cpp svgctrl.cpp\
   SVGRectElement.cpp SVGSVGElement.cpp SVGTextContentElement.cpp\
   SVGAngle.cpp SVGColor.cpp GetSVGDocument.cpp SVGLength.cpp\
   SVGMatrix.cpp SVGPaint.cpp SVGPoint.cpp SVGTests.cpp SVGTransform.cpp\
-  SVGStylable.cpp SVGTransformable.cpp\
+  SVGStylable.cpp SVGTextElement.cpp SVGTransformable.cpp\
   SVGElementInstanceList.cpp SVGLengthList.cpp SVGNumberList.cpp\
-  SVGPathSegList.cpp SVGPointList.cpp SVGStringList.cpp SVGTransformList.cpp\
+  SVGPathSegList.cpp SVGPointList.cpp SVGStringList.cpp\
+  SVGTextElement.cpp SVGTransformList.cpp\
   Elements_SetAttribute.cpp CSSValue.cpp CSSStyleDeclaration.cpp\
   SVGCanvas.cpp SVGCanvasItem.cpp
 
