--- a/Makefile.in
+++ b/Makefile.in
@@ -65,6 +65,8 @@ host_triplet = @host@
 EXEEXT = @EXEEXT@
 OBJEXT = @OBJEXT@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+AGG_CFLAGS = @AGG_CFLAGS@
+AGG_LIBS = @AGG_LIBS@
 AMTAR = @AMTAR@
 AR = @AR@
 AS = @AS@
