- SVGSVGEelement: GetIntersectionList and GetElementById - SVGLocatable: UpdateBBox -> GetElementBBox + SumBBox - svgview : checkbox menu entries that let enable hittest popup message and automatic fit to frame.
git-svn-id: file:///home/jordan/Development/wxSVG/wxsvg-svn/trunk@86 918b0bbe-f86e-4b6f-834e-cb0f658702cb

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,7 +23,7 @@ libwxsvg_la_SOURCES = SVGDocument.cpp svgctrl.cpp\
   SVGPathSegList.cpp SVGPointList.cpp SVGStringList.cpp\
   SVGTextElement.cpp SVGTransformList.cpp\
   Elements_SetAttribute.cpp CSSValue.cpp CSSStyleDeclaration.cpp\
-  SVGCanvas.cpp SVGCanvasItem.cpp
+  SVGCanvas.cpp SVGCanvasItem.cpp NodeList.cpp
 
 libwxsvg_la_LIBADD = xml/libwxxml.la freetype/libwxsvg_freetype.la\
  $(RENDER_LIB)
