1er commit dans branche de developpement. Ajout sous projet svgui
git-svn-id: file:///home/jordan/Development/wxSVG/wxsvg-svn/branches/SVGUI@91 918b0bbe-f86e-4b6f-834e-cb0f658702cb

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,9 @@
 
-SUBDIRS = src svgview
+SUBDIRS = src svgview svgui
 
 ACLOCAL_AMFLAGS=-I.
 
 run: all
 	$(MAKE) -C svgview run
+	$(MAKE) -C svgui run
+	
