added cairo backend
git-svn-id: file:///home/jordan/Development/wxSVG/wxsvg-svn/trunk@95 918b0bbe-f86e-4b6f-834e-cb0f658702cb

--- a/Makefile.in
+++ b/Makefile.in
@@ -71,6 +71,8 @@ AMTAR = @AMTAR@
 AR = @AR@
 AS = @AS@
 AWK = @AWK@
+CAIRO_CFLAGS = @CAIRO_CFLAGS@
+CAIRO_LIBS = @CAIRO_LIBS@
 CC = @CC@
 CFLAGS = @CFLAGS@
 CXX = @CXX@
