--- a/svgview/Makefile.in
+++ b/svgview/Makefile.in
@@ -71,6 +71,8 @@ AMTAR = @AMTAR@
 AR = @AR@
 AS = @AS@
 AWK = @AWK@
+CAIRO_CFLAGS = @CAIRO_CFLAGS@
+CAIRO_LIBS = @CAIRO_LIBS@
 CC = @CC@
 CFLAGS = @CFLAGS@
 CXX = @CXX@
